--- a/GroupTeams/appsettings.json
+++ b/GroupTeams/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ApplicationDbContext": "Server=(localdb)\\mssqllocaldb;Database=GroupTeams.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ApplicationDbContext": "Server=(localdb)\\mssqllocaldb;Database=GroupTeams.Data;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "RemoteDB": "Server=ra1.anystream.eu,1234;Database=GroupTeams.Data;User Id=sa;Password=SuperSecretPassw0rd!"
   }
 }
